--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -3,5 +3,6 @@ body {
   font-family: 'Open Sans', sans-serif;
   box-sizing: border-box;
   padding: 0;
-	margin: 0;
+  margin: 0 auto;
+  max-width: 80rem;
 }
