--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,7 +1,10 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   background-color: var(--blueberry);
   font-family: 'Open Sans', sans-serif;
-  box-sizing: border-box;
   padding: 0;
   margin: 0 auto;
   max-width: 80rem;
