--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -6,9 +6,11 @@
     --element-primary: #4272CA;
     --element-secondary: #F4F4F5;
     --element-border: #E5E5E5;
+    --element-border-dark: #E2E2E2;
     --element-white: #FFFFFF;
 
     --text-primary: #051D26;
+    --text-introduction: #80838A;
     --text-secondary:#6C6C76;
     --text-special: #4272CA;
     --text-white: #FFFFFF;
