Finished general information + question card

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -16,4 +16,6 @@
     --text-white: #FFFFFF;
     --text-gray: #A09FA4;
     --text-gray-2: #AEACB4;
+    --text-gray-3: #6A6A75;
+    --text-gray-4: #6F6F6F;
 }
