--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,6 +21,13 @@ body {
 
 ul {
     list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+ol {
+    margin: 0;
+    padding: 0;
 }
 
 a {
@@ -32,7 +39,7 @@ h1 {
     font-size: 3rem;
 }
 
-h1, h3 {
+h1, h3, h4 {
     font-family: "Montserrat", sans-serif;
 }
 
