Added button states + added some micro interactions

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -4,6 +4,7 @@
 
 :root {
     --element-primary: #4272CA;
+    --element-primary-action: #335AA3;
     --element-secondary: #F4F4F5;
     --element-border: #E5E5E5;
     --element-border-dark: #E2E2E2;
