--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -54,3 +54,25 @@ button {
     font-family: "Rubik", sans-serif;
     text-transform: uppercase;
 }
+
+input[type="range"] {
+    -webkit-appearance: none;
+    background: transparent;
+    cursor: pointer;
+    margin: 0 0.6rem;
+}
+
+input[type="range"]::-webkit-slider-runnable-track {
+    background-color: var(--element-border);
+    height: 0.2rem;
+}
+
+input[type="range"]::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    background-color: var(--element-primary);
+    height: 1rem;
+    width: 1rem;
+    margin-top: -6.4px;
+    border-radius: 50%;
+}
