--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -34,6 +34,9 @@ a {
     text-decoration: none;
 }
 
+/*--------------------------------------------------------------
+# Headings
+--------------------------------------------------------------*/
 h1 {
     color: var(--text-white);
     font-size: 3rem;
@@ -47,6 +50,9 @@ p {
     font-family: "Inter", sans-serif;
 }
 
+/*--------------------------------------------------------------
+# Buttons
+--------------------------------------------------------------*/
 button {
     outline: none;
     border: none;
@@ -55,6 +61,9 @@ button {
     text-transform: uppercase;
 }
 
+/*--------------------------------------------------------------
+# Form controls
+--------------------------------------------------------------*/
 input[type="range"] {
     -webkit-appearance: none;
     background: transparent;
