--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -2,8 +2,8 @@
 # Variables
 --------------------------------------------------------------*/
 :root {
-    --element-primary: #4272CA;
-    --element-primary-action: #335AA3;
+    --element-primary: #5864F2;
+    --element-primary-action: #4751c4;
     --element-secondary: #F4F4F5;
     --element-border: #E5E5E5;
     --element-border-dark: #E2E2E2;
