--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -51,7 +51,7 @@ p {
 }
 
 /*--------------------------------------------------------------
-# Buttons
+# Buttons & links
 --------------------------------------------------------------*/
 button {
     outline: none;
@@ -59,6 +59,10 @@ button {
     color: var(--text-white);
     font-family: "Rubik", sans-serif;
     text-transform: uppercase;
+}
+
+a {
+    font-family: "Rubik", sans-serif;
 }
 
 /*--------------------------------------------------------------
