feat: Improved colour contrast #43

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -10,12 +10,7 @@
     --element-white: #FFFFFF;
 
     --text-primary: #051D26;
-    --text-introduction: #80838A;
-    --text-secondary:#6C6C76;
-    --text-special: #4272CA;
+    --text-secondary:#707070;
+    --text-special: #4751c4;
     --text-white: #FFFFFF;
-    --text-gray: #A09FA4;
-    --text-gray-2: #AEACB4;
-    --text-gray-3: #6A6A75;
-    --text-gray-4: #6F6F6F;
 }
