--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -4,13 +4,13 @@
 :root {
     --element-primary: #5864F2;
     --element-primary-action: #4751c4;
-    --element-secondary: #F4F4F5;
+    --element-secondary: #F9F9F9;
     --element-border: #E5E5E5;
     --element-border-dark: #E2E2E2;
     --element-white: #FFFFFF;
 
     --text-primary: #051D26;
-    --text-secondary:#707070;
-    --text-special: #4751c4;
+    --text-secondary:#B4B6BC;
+    --text-special: #5864F2;
     --text-white: #FFFFFF;
 }
