Added questions and WIP filter

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -13,4 +13,6 @@
     --text-secondary:#B4B6BC;
     --text-special: #5864F2;
     --text-white: #FFFFFF;
+    --text-gray: #AEACB4;
+    --text-gray-dark: #6C6C76;
 }
