--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -42,8 +42,12 @@ h1 {
     font-size: 1.88rem;
 }
 
-h1, h3, h5 {
-    font-family: "Montserrat", sans-serif;
+h2 {
+    font-size: 1.25rem;
+}
+
+h3 {
+    font-size: 1.35rem;
 }
 
 h4 {
@@ -52,6 +56,14 @@ h4 {
     font-weight: 500;
 }
 
+
+h1, h2, h3, h5 {
+    font-family: "Montserrat", sans-serif;
+}
+
+/*--------------------------------------------------------------
+# Paragraphs
+--------------------------------------------------------------*/
 p {
     font-family: "Inter", sans-serif;
 }
