feat: Added link to community widget + changed border radius

--- a/src/styles/theme.css
+++ b/src/styles/theme.css
@@ -2,8 +2,14 @@
 # Variables
 --------------------------------------------------------------*/
 :root {
+
+    /* Colors */
     --blue: #050542;
     --green: #66e5bf;
     --purple: #a675f5;
     --white: #ffffff;
+
+    /* Borders */
+    --border-round: 10px;
+    --border-round-pilled: 2rem;
 }
