--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -20,7 +20,8 @@ body {
     background-color: var(--blue);
     font-family: "Open Sans", sans-serif;
     font-size: 1.2rem;
-
+    scrollbar-gutter: stable;
+    overflow-y: scroll;
 }
 
 ul {
